syntax = "proto3";

package shortener;
option go_package = "shortener/api";

import "google/protobuf/empty.proto";

// Сервис сокращения URL.
service ShortenerService {
  // Сократить URL.
  rpc ShortenURL (URLShortenRequest) returns (URLShortenResponse);
  // Получить полный URL.
  rpc ExpandURL (URLExpandRequest) returns (URLExpandResponse);
  // Список всех URL пользователя.
  rpc ListUserURLs (google.protobuf.Empty) returns (UserURLsResponse);
}

message URLShortenRequest {
  string url = 1;
}

message URLShortenResponse {
  string result = 1;
}

message URLExpandRequest {
  string id = 1;
}

message URLExpandResponse {
  string result = 1;
}

message UserURLsResponse {
  repeated URLData url = 1;
}

message URLData {
  string short_url = 1;
  string original_url = 2;
}
